Entity constructor modified and Room addition with checkRoom method!

--- a/Swashbuckler/Swashbuckler.vcxproj
+++ b/Swashbuckler/Swashbuckler.vcxproj
@@ -113,10 +113,12 @@
   <ItemGroup>
     <ClCompile Include="entity.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="room.cpp" />
     <ClCompile Include="world.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="entity.h" />
+    <ClInclude Include="room.h" />
     <ClInclude Include="world.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
