Added modifications to Creature location and Exits

--- a/Swashbuckler/Swashbuckler.vcxproj
+++ b/Swashbuckler/Swashbuckler.vcxproj
@@ -113,6 +113,7 @@
   <ItemGroup>
     <ClCompile Include="creature.cpp" />
     <ClCompile Include="entity.cpp" />
+    <ClCompile Include="exit.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="room.cpp" />
@@ -121,6 +122,7 @@
   <ItemGroup>
     <ClInclude Include="creature.h" />
     <ClInclude Include="entity.h" />
+    <ClInclude Include="exit.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="room.h" />
     <ClInclude Include="world.h" />
