--- a/Swashbuckler/Swashbuckler.vcxproj.filters
+++ b/Swashbuckler/Swashbuckler.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="exit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="world.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="exit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
