--- a/Swashbuckler/Swashbuckler.vcxproj.filters
+++ b/Swashbuckler/Swashbuckler.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="item.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="npc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="world.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="item.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="npc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
